--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,20 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:camunda;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:camunda;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;CACHE_SIZE=131072
     driver-class-name: org.h2.Driver
     username: sa
     password:
     hikari:
-      maximum-pool-size: 50
-      minimum-idle: 10
-      connection-timeout: 20000
+      maximum-pool-size: 200
+      minimum-idle: 100
+      connection-timeout: 5000
       idle-timeout: 300000
-      max-lifetime: 1200000
-      leak-detection-threshold: 60000
+      max-lifetime: 1800000
+      leak-detection-threshold: 30000
       pool-name: TransactionProcessorPool
+      connection-test-query: SELECT 1
+      validation-timeout: 3000
+      auto-commit: false
   jpa:
     hibernate:
       ddl-auto: update
@@ -33,10 +36,13 @@ spring:
   task:
     execution:
       pool:
-        core-size: 20
-        max-size: 100
-        queue-capacity: 200
+        core-size: 100
+        max-size: 500
+        queue-capacity: 2000
         keep-alive: 60s
+        thread-name-prefix: "tx-async-"
+        wait-for-tasks-to-complete-on-shutdown: true
+        await-termination-seconds: 60
   mail:
     host: smtp.gmail.com
     port: 587
@@ -62,10 +68,13 @@ camunda:
       enabled: true
     job-execution:
       enabled: true
-      core-pool-size: 20
-      max-pool-size: 50
-      queue-capacity: 100
+      core-pool-size: 100
+      max-pool-size: 300
+      queue-capacity: 1000
       keep-alive-time: 60
+      max-jobs-per-acquisition: 10
+      wait-time-in-millis: 1000
+      lock-time-in-millis: 300000
     webapp:
       enabled: true
       index-redirect-enabled: true
@@ -148,13 +157,13 @@ resilience4j:
 app:
   transaction:
     thread-pool:
-      core-size: 30
-      max-size: 100
-      queue-capacity: 500
+      core-size: 200
+      max-size: 800
+      queue-capacity: 5000
       keep-alive-seconds: 60
     batch:
-      size: 100
-      timeout-seconds: 30
+      size: 500
+      timeout-seconds: 10
     monitoring:
       enabled: true
       alert-failure-threshold: 10
